--- a/Halloapp/id.lproj/Localizable.stringsdict
+++ b/Halloapp/id.lproj/Localizable.stringsdict
@@ -198,7 +198,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>%d Unread Messages</string>
+			<string>%d Pesan Belum Dibaca</string>
 		</dict>
 	</dict>
 	<key>notification.n.photos</key>
