--- a/Notification Service Extension/id.lproj/Localizable.strings
+++ b/Notification Service Extension/id.lproj/Localizable.strings
@@ -11,10 +11,10 @@
 "button.add" = "Tambah";
 
 /* Title for generic Cancel button. Mostly used in popups and as such. */
-"button.cancel" = "Batal";
+"button.cancel" = "Batalkan";
 
 /* Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
-"button.cancel.capitalized" = "BATAL";
+"button.cancel.capitalized" = "BATALKAN";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "Lanjut";
@@ -139,6 +139,18 @@
 /* New moment notification text to be shown to the user. */
 "notification.moment" = "Momen baru";
 
+/* New moment notification text to be shown to the user. */
+"notification.moment.1" = "%@ berbagi momen";
+
+/* New moment notification text to be shown to the user. */
+"notification.moment.2" = "%1$@ dan %2$@ berbagi momen baru";
+
+/* New moment notification text to be shown to the user. */
+"notification.moment.3" = "%1$@, %2$@, dan %3$@ berbagi momen baru";
+
+/* New moment notification text to be shown to the user. */
+"notification.moment.5" = "%1$@, %2$@, %3$@, dan lainnya berbagi momen baru";
+
 /* New post notification text when post is multiple photos without caption. */
 "notification.n.photos" = "notification.n.photos";
 
@@ -158,7 +170,7 @@
 "notification.new.message" = "Pesan Baru";
 
 /* Title for the new feed post notification. */
-"notification.new.post" = "Unggahan Baru";
+"notification.new.post" = "Postingan Baru";
 
 /* New post notification text when post is one photo without caption. */
 "notification.one.photo" = "📷 foto";
